BUG 4787: Fix rich text formatting in IE7 * Technically the issue was that in IE7 #actionBox was filling the width and overlapping the formatting options * Also changed how external editor bits are handled because I like this solution better anyway
QA: Make sure bug is fixed and formatting options still work in all
browsers

--- a/app/styles/screen-dataset.sass
+++ b/app/styles/screen-dataset.sass
@@ -117,6 +117,7 @@ html, body
     right: 0
     top: 0
     .ie7 &
+      max-width: 75em
       z-index: 1
 
     #toolbarOptions
